# boilerplate/koa/src/models/Foo.js
@@ -9,8 +9,18 @@ export default (sequelize, DataTypes) => {
       type: DataTypes.STRING,
       allowNull: false,
       unique: true,
+      // defaultValue: null,
     },
-    status: {
+    birthDay: {
+      type: DataTypes.DATEONLY,
+      allowNull: true,
+    },
+    goodTime: {
+      type: DataTypes.DATE,
+      allowNull: false,
+      defaultValue: DataTypes.NOW,
+    },
+    age: {
       type: DataTypes.TINYINT,
       allowNull: true,
       validate: {
@@ -18,8 +28,42 @@ export default (sequelize, DataTypes) => {
         min: 0,
       }
     },
+    email: {
+      type: DataTypes.STRING,
+      allowNull: true,
+      validate: {
+        isEmail: true,
+      },
+    },
+    homePage: {
+      type: DataTypes.STRING,
+      allowNull: true,
+      validate: {
+        isUrl: true,
+      },
+    },
+    notice: {
+      type: DataTypes.TEXT,
+      allowNull: true,
+    },
+    isGood: {
+      type: DataTypes.BOOLEAN,
+      allowNull: false,
+      defaultValue: true,
+    },
+    myExtra: {
+      type: DataTypes.JSON,
+      allowNull: true,
+    },
+    status: {
+      type: DataTypes.TINYINT,
+      validate: {
+        isIn: [[1, 2, 3]],
+      },
+      allowNull: false,
+    },
   }, {
-      // underscored: true,
+      // underscored: true, // 下划线字段
       paranoid: true, // 软删除
       tableName: 'Foo',
     });
